--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@
 </div>
 </div>
     <div class="container">
-
-        <img src="236612.jpg"alt="" class="images" id="img1"  onclick="ben101()">
-        <img src="551538.jpg"  alt="" onclick="ben102()" class="images" id="img2" >
-        <img src="600712.jpg" alt="" class="images" id="img3"  onclick="ben103()">
-        <img src="606650.jpg" alt="" class="images" id="img4"  onclick="ben104()">
-        <img src="677723.jpg" alt="" class="images" id="img5" >
-        <img src="689398.jpg" alt="" class="images" id="img6" >
-        <div class="empty"></div>
-        <!-- <img src="721135.jpg" alt="" id="img7" height="250px"  width="400px"> -->
-        <div class="leftside"></div>
-        <div class="rightside"></div>
+<div class="paddingImage">
+        <img src="236612.jpg"alt="" class="images" id="img1"  onclick="ben101()"></div>
+        <div class="paddingImage"> <img src="551538.jpg"  alt="" onclick="ben102()" class="images" id="img2" ></div>
+        <div class="paddingImage"> <img src="600712.jpg" alt="" class="images" id="img3"  onclick="ben103()"></div>
+        <div class="paddingImage">  <img src="606650.jpg" alt="" class="images" id="img4"  onclick="ben104()"></div>
+        <div class="paddingImage">  <img src="677723.jpg" alt="" class="images" id="img5" ></div>
+        <div class="paddingImage"> <img src="689398.jpg" alt="" class="images" id="img6" ></div>
+    
     </div>
 
     <div class="fTitle">Featured titles
